--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -16,7 +16,7 @@ buildFuture = false
 
 enableEmoji = true
 
-# googleAnalytics = "G-XXXXXXXXX"
+googleAnalytics = "G-KVMDRX43MB"
 
 [pagination]
   pagerSize = 100
